# Maze

./: .gitignore  CMakeLists.txt  README.md
inc/: macros.h  maze.h  structures.h
resources/maps/: def
src/: display.c  file_handling.c  helpers.c  init_sdl.c  main.c  parser.c  player.c  raycast.c  textures.c
